--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "C_Cpp.errorSquiggles": "enabled",
     "files.associations": {
-        "stdint.h": "c"
+        "stdint.h": "c",
+        "reloj_lib.h": "c"
     }
 }
